--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         <a href="services.html" class="nav-link px-4 py-2 rounded-md text-sm font-medium" data-translate="nav_services">Services</a>
                         <a href="about.html" class="nav-link px-4 py-2 rounded-md text-sm font-medium" data-translate="nav_about">About Us</a>
                         <a href="contact.html" class="nav-link px-4 py-2 rounded-md text-sm font-medium" data-translate="nav_contact">Contact</a>
+<a href="signin.html" class="nav-link px-4 py-2 rounded-md text-sm font-medium" data-translate="nav_contact">Signin</a>
                     </nav>
                     <div class="flex items-center space-x-3 lang-switcher">
                         <a href="en.json" data-lang="en" class="text-sm hover:underline" data-translate="lang_en_short">EN</a>
