--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
                         <a href="services.html" class="nav-link px-4 py-2 rounded-md text-sm font-medium" data-translate="nav_services">Services</a>
                         <a href="about.html" class="nav-link px-4 py-2 rounded-md text-sm font-medium" data-translate="nav_about">About Us</a>
                         <a href="contact.html" class="nav-link px-4 py-2 rounded-md text-sm font-medium" data-translate="nav_contact">Contact</a>
+                        <a href="signin.html" class="nav-link px-4 py-2 rounded-md text-sm font-medium" data-translate="nav_contact">Signin</a>
                     </nav>
                     <div class="flex items-center space-x-3 lang-switcher">
                         <a href="en.json" data-lang="en" class="text-sm hover:underline" data-translate="lang_en_short">EN</a>
@@ -46,6 +47,7 @@
             <a href="services.html" class="block py-2 px-4 text-sm hover:bg-orange-50 nav-link" data-translate="nav_services">Services</a>
             <a href="about.html" class="block py-2 px-4 text-sm hover:bg-orange-50 nav-link" data-translate="nav_about">About Us</a>
             <a href="contact.html" class="block py-2 px-4 text-sm hover:bg-orange-50 nav-link" data-translate="nav_contact">Contact</a>
+            <a href="signin.html" class="nav-link px-4 py-2 rounded-md text-sm font-medium" data-translate="nav_contact">Signin</a>
             <div class="border-t border-gray-200">
                 <div class="flex items-center justify-center space-x-6 py-4 lang-switcher">
                      <a href="en.json" data-lang="en" class="text-sm hover:underline" data-translate="lang_en_long">English</a>
@@ -123,6 +125,7 @@
                         <li><a href="services.html" class="text-gray-400 hover:text-white">Services</a></li>
                         <li><a href="about.html" class="text-gray-400 hover:text-white">About Us</a></li>
                         <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact</a></li>
+                        <li><a href="signup.html" class="text-gray-400 hover:text-white">Join US</a></li>
                     </ul>
                 </div>
                 <div>
